test SSH for note

--- a/myExe/OOP/PrimObject.html
+++ b/myExe/OOP/PrimObject.html
@@ -15,7 +15,7 @@
 
 -->
 
-    <title>Примитивы и объекты в JS</title>
+    <title>Примитивы и объекты в JS проверим работу SSH</title>
 
     <!--Тег script-->
     <script type="text/javascript">
