add some-feature2 branch

--- a/myExe/OOP/PrimObject.html
+++ b/myExe/OOP/PrimObject.html
@@ -15,7 +15,9 @@
 
 -->
 
-    <title>Примитивы и объекты в JS проверим работу SSH</title>
+    <title>Примитивы и объекты в JS проверим работу SSH
+        Hello новая ветка
+    </title>
 
     <!--Тег script-->
     <script type="text/javascript">
