--- a/petrJS/ch02/2_17 Получение элементов со стр_ч2/index.html
+++ b/petrJS/ch02/2_17 Получение элементов со стр_ч2/index.html
@@ -17,18 +17,20 @@
     <button>3</button>
     <button>4</button>
     <button>My_5</button>
+    <button>My_replace</button>
+    <button>My_rep_child</button>
 
     <div class="circle"></div>
     <div class="circle"></div>
     <div class="circle"></div>
-<div>
+
     <div class="heart"></div>
     <div class="heart"></div>
     <div class="heart"></div>
     <div class="heart"></div>
-</div>
+
 <h3>**css "украдёт" сердечки если его не настроить для myheart--</h3> 
-<div>
+<div class="wrapper">
     <div class="myheart"></div>
     <div class="myheart"></div>
     <div class="myheart"></div> 
