--- a/petrJS/ch02/2_18_2_Бонус_События на моб_ устр_вах/index.html
+++ b/petrJS/ch02/2_18_2_Бонус_События на моб_ устр_вах/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Знакомство с ДОМ</title>
+    <title>Mobile version</title>
     <link rel="stylesheet" href="16 style.css">
 </head>
 <body>
-    <h2>Работа с ДОМ</h2>
+    <h2>Работа с мобильной версией</h2>
     <h3>ДОМ_Получение элементов со страницы</h3>
     <div class="box" id="box"></div>
     <button>1</button>
