--- a/petrJS/ch03/Задание_10/yoga_timer/index.html
+++ b/petrJS/ch03/Задание_10/yoga_timer/index.html
@@ -106,11 +106,13 @@
 					До конца акции осталось
 				</div>
 				<div class="timer-numbers" id="timer">
-					<span class="hours">18</span>
+					<span class="days">77</span>
 					<span>:</span>
-					<span class="minutes">20</span>
+					<span class="hours">22</span>
 					<span>:</span>
-					<span class="seconds">11</span>
+					<span class="minutes">23</span>
+					<span>:</span>
+					<span class="seconds">24</span>
 				</div>
 			</div>
 			<button class="more"> Узнать больше</button>
