--- a/petrJS/ch03/Задание_10/page_parametrs/21.1 index.html
+++ b/petrJS/ch03/Задание_10/page_parametrs/21.1 index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Animation</title>
-    <link rel="stylesheet" href="19.7 style.css">
+    <link rel="stylesheet" href="21.1%20style.css">
 </head>
 <body>
     <h1 class="textMy">Анимация</h1>
