--- a/petrJS/ch03/3_24-28_Стандарт ES6/index.html
+++ b/petrJS/ch03/3_24-28_Стандарт ES6/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1 class="textMy">Стандарты ES6</h1>
-    <button class="btn">Standards</button>
+    <button class="btn">Контекст вызова</button>
     <div class="wrapper">
         <div class="box"></div>
     </div>
