--- a/petrJS/ch03/3_28_Классы/index.html
+++ b/petrJS/ch03/3_28_Классы/index.html
@@ -1,15 +1,15 @@
-<!--ES6 параметры по умолчанию index.html-->
+<!--ES6 классы index.html-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>ES6</title>
+    <title>ES6 классы</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 class="textMy">ES6 параметры по умолчанию</h1>
+    <h1 class="textMy">ES6 классы</h1>
     <button class="btn">запустить функцию</button>
     <div class="wrapper">
         <div class="box"></div>
