--- a/petrJS/ch04/32_задание 15 Создаём слайдер на сайте/alex_testDomain/index.html
+++ b/petrJS/ch04/32_задание 15 Создаём слайдер на сайте/alex_testDomain/index.html
@@ -143,7 +143,7 @@
 					<div class="dot"></div>
 					<div class="dot"></div>
 				</div>
-			</div>
+			</div> <!--окончание  div class="slider" id="photo"-->
 			<div class="counter" id="price">
 				<div class="counter-title">Рассчитайте стоимость вашего отдыха
 				</div>
