--- a/petrJS/ch04/32_Задание Promise ES6/alex_testDomain/index.html
+++ b/petrJS/ch04/32_Задание Promise ES6/alex_testDomain/index.html
@@ -26,6 +26,9 @@
     <button id="btn">Создать Promise!</button>
     <div id="log"></div>
 
+    <button id="btn1">FIRE!</button>
+    <div id="log"></div>
+
     <script src="js/script.js"></script>
     <script src="js/index.js"></script>
 </body>
