--- a/petrJS/ch04/32_Задание Promise ES6/alex_testDomain/index.html
+++ b/petrJS/ch04/32_Задание Promise ES6/alex_testDomain/index.html
@@ -27,7 +27,7 @@
     <div id="log"></div>
 
     <button id="btn1">FIRE!</button>
-    <div id="log"></div>
+    <div id="log1"></div>
 
     <script src="js/script.js"></script>
     <script src="js/index.js"></script>
