--- a/petrJS/ch04/32_Задание Promise ES6/alex_testDomain/index.html
+++ b/petrJS/ch04/32_Задание Promise ES6/alex_testDomain/index.html
@@ -29,6 +29,27 @@
     <button id="btn1">FIRE!</button>
     <div id="log1"></div>
 
+
+    <div class="contact" id="contacts">
+        <div class="popup-form-header">
+            Наш сайт будет запоминать нажатие кнопки даже после перезагрузки
+        </div>
+        <div class="contact-form">
+
+            <form id="form">
+                <input required type="email" placeholder="Ваша почта">
+                <input required type="tel" placeholder="Ваш телефон">
+                <button type="submit">Включим localStorage</button>
+            </form>
+
+            <div class="contact-form-title">
+                Мы с вами свяжемся
+            </div>
+
+        </div>
+    </div>
+
+
     <script src="js/script.js"></script>
     <script src="js/index.js"></script>
 </body>
