--- a/petrJS/ch04/35_Задание 17 Работаем с JQuery/Homework/index.html
+++ b/petrJS/ch04/35_Задание 17 Работаем с JQuery/Homework/index.html
@@ -5,10 +5,12 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/systemjs/6.8.3/system.min.js"></script>
 	<title>Tour</title>
 </head>
 <body>
-	
+
 	<!-- Modals -->
 <div class="modal">      
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
