--- a/petrReact/ch06/React_step_2/public/index.html
+++ b/petrReact/ch06/React_step_2/public/index.html
@@ -6,12 +6,35 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>React App</title>
+    <title>AlexReact_App</title>
   </head>
   <body>
+  <script src="https://unpkg.com/@babel/standalone/babel.js"></script>
+  <script src="https://unpkg.com/react/umd/react.development.js"></script>
+  <script src="https://unpkg.com/react-dom/umd/react-dom.development.js"></script>
+  <h1>👋 Hello my best friend!</h1>
+  <div id="root"/></div>
+  <div id="root2"/>
+  <script type="text/babel">
+    function Example() {
+      return (
+              <>
+                Some text.
+                <h2>A heading Exemple for fragments</h2>
+                More text.
+                <h2>Another heading 6.55 Свойства и состояния компонентов. События в React _ Теория</h2>
+                Even more text.
+              </>
+      );
+    }
+    ReactDOM.render(<Example />, document.getElementById('root2'));
+  </script>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <div id="root"></div>
+
+  </div>
+
   </body>
 </html>
+
