--- a/petrReact/ch08/react_step_11/public/index.html
+++ b/petrReact/ch08/react_step_11/public/index.html
@@ -1,4 +1,4 @@
-<!-- index.html  react_step_11 (см. 8.71 Соединяем React и Redux) -->
+<!-- index.html  react_step_11 (см. 8.71 Соединяем React и Redux ч.2 и 8.72 React Context) -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
